updated contact info icons

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -34,32 +34,26 @@
 
     <!-- Some other contect lul -->
     <div class="content">
+      <a href="/events"></a>
     </div>
 
     <!-- Contact Info -->
     <div class="contact-info">
       <ul>
         <li>
-          <a>
-            <img src="images/icons/facebook.png">Facebook
-          </a>
+          <a><img src="images/icons/facebook.png"></a>
         </li>
         <li>
-          <a>
-            <img src="images/icons/instagram.png">Instagram
-          </a>
+          <a><img src="images/icons/instagram.png"></a>
         </ii>
         <li>
-          <img src="images/icons/twitter.png">
-          <a>Twitter</a>
+            <a><img src="images/icons/twitter.png"></a>
         </li>
         <li>
-          <img src="images/icons/phone.png">
-          <a>Phone</a>
+            <a><img src="images/icons/phone.png"></a>
         </li>
         <li>
-          <img src="images/icons/mail.png">
-          <a>Email</a>
+            <a><img src="images/icons/mail.png"></a>
         </li>
       </ul>
     </div>
