--- a/static_files/css/homepage.css
+++ b/static_files/css/homepage.css
@@ -33,6 +33,8 @@
 
 .contact-info ul {
   background: inherit;
+  width: 50%;
+  margin: auto;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
@@ -40,7 +42,7 @@
 
 .contact-info li {
   background: inherit;
-  display: flex;
+  display: inline-block;
   align-items: center;
   padding-right: 20px;
   color: #EEE;
