--- a/static_files/css/main.css
+++ b/static_files/css/main.css
@@ -5,7 +5,7 @@
  */
 
  * {
-   font-family: Helvetica;
+   font-family: sans-serif;
    margin: 0;
    padding: 0;
    background: #010A1A;
@@ -18,6 +18,8 @@
   display: flex;
   align-items:center;
   background: #475258;
+  position: sticky;
+  top: 0;
 }
 
 .header #home-title {
